# lightpad

./: .clang-format  .gitignore  CMakeLists.txt
src/: command.hpp  main.cpp  screen.hpp  ui.hpp  utils.hpp
src/awacorn/: awacorn.hpp  generator.hpp  promise.hpp
src/render/: tomorrow-night-bright-cpp.hpp  tomorrow-night-bright-js.hpp
